Add start of openjpa implementation. Add new database exception and move db related exceptions into new package. Get rid of HibException and use above. Remove some db interface features we never used: * getBlob(InputStream val, long length); * reattach * webMode which used hibernate specific flushmode * createNoFlushQuery * getQueryString * saveOrUpdateCopy * restore * reAttach * lockRead * lockUpdate